# Jericho

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  __main__.py  config.example.json  jericho.py  pyproject.toml
.githooks/: pre-push
.github/workflows/: python.yml
config/: __init__.py  config.py  constants.py
helper/: __init__.py  console.py  file.py  input.py  path.py
logger/: __init__.py
tests/: config_test.py  helper_test.py  translator_test.py
tests/samples/: bad_config.json  write.txt
tests/samples/folder/sub_folder/: sub_file.txt  sub_file2.txt  sub_file3.txt
translator/: __init__.py
