[project]
name = "jericho"
version = "0.1.0"
description = "Tool to translate files (english to french)"
authors = [
    {name = "Lucas Noga",email = "luc4snoga@gmail.com"}
]
license = {text = "gpl-3"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "deep-translator (>=1.11.4,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pyinstaller (>=6.19.0,<7.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pip-audit (>=2.10.0,<3.0.0)",
]
